<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧城市</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_home">首页</string>
    <string name="tab_news">新闻中心</string>
    <string name="tab_smart_service">智慧服务</string>
    <string name="tab_affairs">政务</string>
    <string name="tab_setting">设置</string>

</resources>